--- a/library_app/templates/library_app/login.html
+++ b/library_app/templates/library_app/login.html
@@ -1,20 +1,28 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="{% static 'css/user.css' %}">
 </head>
 <body>
-    <h1>Login</h1>
+<div class="auth-container">
+    <h2>Login</h2>
+    {% if messages %}
+        <ul class="messages">
+        {% for message in messages %}
+            <li class="{{ message.tags }}">{{ message }}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
     <form method="POST">
         {% csrf_token %}
-        <label>Username or Email:</label><br>
-        <input type="text" name="account_name" required><br><br>
-        
-        <label>Password:</label><br>
-        <input type="password" name="password" required><br><br>
-
+        <input type="text" name="account_name" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Login</button>
     </form>
     <p>Don't have an account? <a href="{% url 'signup' %}">Sign up here</a></p>
+</div>
 </body>
 </html>
