--- a/library_app/templates/library_app/signup.html
+++ b/library_app/templates/library_app/signup.html
@@ -1,29 +1,31 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Sign Up</title>
+    <link rel="stylesheet" href="{% static 'css/user.css' %}">
 </head>
 <body>
-    <h1>Create an Account</h1>
+<div class="auth-container">
+    <h2>Create Account</h2>
+    {% if messages %}
+        <ul class="messages">
+        {% for message in messages %}
+            <li class="{{ message.tags }}">{{ message }}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
     <form method="POST">
         {% csrf_token %}
-        <label>Full Name:</label><br>
-        <input type="text" name="full_name" required><br><br>
-
-        <label>Email:</label><br>
-        <input type="email" name="email" required><br><br>
-
-        <label>Username:</label><br>
-        <input type="text" name="account_name" required><br><br>
-
-        <label>Password:</label><br>
-        <input type="password" name="password" required><br><br>
-
-        <label>Confirm Password:</label><br>
-        <input type="password" name="confirm_password" required><br><br>
-
+        <input type="text" name="full_name" placeholder="Full Name" required>
+        <input type="email" name="email" placeholder="Email" required>
+        <input type="text" name="account_name" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <input type="password" name="confirm_password" placeholder="Confirm Password" required>
         <button type="submit">Sign Up</button>
     </form>
     <p>Already have an account? <a href="{% url 'login' %}">Login here</a></p>
+</div>
 </body>
 </html>
