--- a/library_app/templates/library_app/user_contactus.html
+++ b/library_app/templates/library_app/user_contactus.html
@@ -1,7 +1,9 @@
 {% extends 'library_app/base_user.html' %}
+{% block title %}Contact Us | PageTurn Library{% endblock %}
+
 {% block content %}
 <h2>Contact Us / Feedback</h2>
-<form method="POST">
+<form method="POST" action="{% url 'user_contactus' %}">
 {% csrf_token %}
 <select name="book_id">
 <option value="">General</option>
