--- a/library_app/templates/library_app/user_note.html
+++ b/library_app/templates/library_app/user_note.html
@@ -1,4 +1,6 @@
 {% extends 'library_app/base_user.html' %}
+{% block title %}Read Books | PageTurn Library{% endblock %}
+
 {% block content %}
 <h2>Books You Read</h2>
 <table>
