--- a/library_app/templates/library_app/admin_add_book.html
+++ b/library_app/templates/library_app/admin_add_book.html
@@ -1,7 +1,9 @@
 {% extends 'library_app/base_admin.html' %}
 {% block content %}
+
 <h2>Add New Book</h2>
-<form method="POST">
+
+<form method="POST" action="{% url 'admin_add_book' %}">
     {% csrf_token %}
     <input type="text" name="title" placeholder="Book Title" required><br>
     <input type="text" name="author" placeholder="Author" required><br>
@@ -9,4 +11,5 @@
     <textarea name="description" placeholder="Description"></textarea><br>
     <button type="submit">Add Book</button>
 </form>
+
 {% endblock %}
