--- a/library_app/templates/library_app/admin_add_user.html
+++ b/library_app/templates/library_app/admin_add_user.html
@@ -1,33 +1,40 @@
+
 {% extends 'library_app/base_admin.html' %}
 {% block content %}
 
 <h2>Add New User</h2>
 
+{% if messages %}
+    {% for message in messages %}
+        <p class="alert alert-{{ message.tags }}">{{ message }}</p>
+    {% endfor %}
+{% endif %}
+
 {% if error %}
     <p style="color:red; font-weight:600;">{{ error }}</p>
 {% endif %}
 
-<form method="post">
+<form method="POST" action="{% url 'admin_add_user' %}">
     {% csrf_token %}
 
     <label for="reference_id">Reference ID:</label><br>
-    <input type="text" id="reference_id" name="reference_id" required><br><br>
+    <input type="text" name="reference_id" id="reference_id" value="{{ request.POST.reference_id|default_if_none:'' }}"><br><br>
 
     <label for="user_name">Name:</label><br>
-    <input type="text" id="user_name" name="user_name" required><br><br>
+    <input type="text" name="user_name" id="user_name" value="{{ request.POST.user_name|default_if_none:'' }}" required><br><br>
 
     <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" required><br><br>
+    <input type="email" name="email" id="email" value="{{ request.POST.email|default_if_none:'' }}" required><br><br>
 
     <label for="phone_contact">Phone:</label><br>
-    <input type="text" id="phone_contact" name="phone_contact" required><br><br>
+    <input type="text" name="phone_contact" id="phone_contact" value="{{ request.POST.phone_contact|default_if_none:'' }}" required><br><br>
 
     <label for="user_address">Address:</label><br>
-    <textarea id="user_address" name="user_address" required></textarea><br><br>
+    <textarea name="user_address" id="user_address" required>{{ request.POST.user_address|default_if_none:'' }}</textarea><br><br>
 
-    <button type="submit" style="background:#004aad; color:white; padding:5px 10px; border:none; border-radius:4px;">Add User</button>
+    <button type="submit">Add User</button>
 </form>
 
-<a href="{% url 'admin_users' %}" style="display:inline-block; margin-top:10px;">Back to Users</a>
+<a href="{% url 'admin_users' %}">Back to Users</a>
 
 {% endblock %}
